# la_cuisine

./: apresentacao.html  docker-compose.yml  package-lock.json  package.json  prompts_ui_lacuisine.md  skills-lock.json  test_health.py
backend/: .coverage  .env  .env.example  Dockerfile  alembic.ini  coverage.xml  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/api/dependencies/: deps.py
backend/app/api/routers/: auth_router.py  chat_router.py  menu_router.py  recipe_router.py
backend/app/api/schemas/: schemas.py
backend/app/application/use_cases/: ai_use_cases.py  auth_use_cases.py  menu_use_cases.py  recipe_use_cases.py
backend/app/domain/entities/: menu.py  recipe.py  user.py
backend/app/domain/enums/: recipe_enums.py
backend/app/domain/ports/: repository_ports.py  service_ports.py
backend/app/infrastructure/ai/: gemini_service.py
backend/app/infrastructure/auth/: jwt_handler.py  password.py
backend/app/infrastructure/database/: menu_repository.py  models.py  recipe_repository.py  session.py  user_repository.py
backend/migrations/: env.py
backend/migrations/versions/: 25b86c4fd68e_add_extended_profile_cols.py  3456eb293d8a_initial_migration.py
backend/tests/: conftest.py
backend/tests/e2e/: test_api.py  test_menu_api.py
backend/tests/integration/: test_menu_repository.py  test_recipe_repository.py  test_recipe_user_filtering.py  test_user_repository.py
backend/tests/unit/api/: test_chat_router.py  test_deps.py  test_exception_handlers.py  test_recipe_router_errors.py
frontend/: package-lock.json  (+2 more)
(+97 files in other folders)
